src/objects/test2__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>one2__c</fullName>
        <label>one2</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>three2__c</fullName>
        <label>three2</label>
        <length>29</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>two2__c</fullName>
        <label>two2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>test2</label>
</CustomObject>